# cnp_v1_starter_kit

./: .env.example  .gitignore  001_v2_views_and_trim.sql  002_ops_tables.sql  003_v1_to_v2_schema.sql  004_per_node_secrets.sql  CNP-OPS-004_operational_intelligence_layer.md  CNP-OPS-005_PATCH_NOTES.md  CNP-SPRINT-1_PATCH_NOTES.md  CNP-SPRINT-2_PATCH_NOTES.md  README.md  TLS_SETUP.md  __init__.py  admin.py  api.py  auth.py  cnp_board_003_engineering_board.md  cnp_exec_002_amended_execution_plan.docx.md  cnp_node_skeleton.ino  cnp_v1_schemas.json  cnp_v1_unified_spec.md  codessa_registry.db  compat.py  conftest.py  db.py  detector.py  gateway.py  healer.py  main.py  migrate.py  models.py  mqtt_client.py  node_registry.sql  pytest.ini  rate_limit.py  routes.py  rules.py  rules.yaml  schemas.py  scoring.py  (+8 more)
.github/workflows/: ci.yml
.trae/documents/: cnp_v1_state_review_next_steps_2026-03-18.md
analysis/: cnp_comparative_analysis.md  cnp_v1_technical_audit.md  run_comparative_analysis.py
analysis/cnp_v1_phase0_implementation/phase0/: LICENSE
analysis/cnp_v1_phase0_implementation/phase0/gateway/: pytest.ini  requirements.txt
analysis/cnp_v1_phase2_implementation/phase2/: CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
analysis/cnp_v1_phase2_implementation/phase2/gateway/: Dockerfile  pyproject.toml
analysis/cnp_v1_phase2_implementation/phase2/legacy/: ARCHIVED.md
cnp_ops_005_patch_set/: CNP-OPS-005_README.md  README.md
cnp_ops_005_patch_set/docs/schemas/: node_registry_schema.md
cnp_ops_005_patch_set/examples/: config.node.example.json
cnp_ops_005_patch_set/firmware/: platformio.ini
cnp_ops_005_patch_set/firmware/config/: default_config.h
cnp_ops_005_patch_set/firmware/include/: Application.h  EventQueue.h  OtaManager.h  Protocol.h  TransportMqtt.h
cnp_ops_005_patch_set/firmware/src/: ConfigManager.cpp  TransportMqtt.cpp  main.cpp
cnp_ops_005_patch_set/gateway/: requirements.txt
cnp_ops_005_patch_set/gateway/app/: main.py
cnp_ops_005_patch_set/gateway/app/api/: routes.py
cnp_ops_005_patch_set/gateway/app/core/: config.py  db.py  mqtt_client.py  registry.py  storage.py
cnp_ops_005_patch_set/gateway/app/ops/: __init__.py  anomalies.py  api.py  api_models.py  detector.py  (+6 more)
cnp_ops_005_patch_set/gateway/migrations/: 001_ops_tables.sql
cnp_ops_005_patch_set/gateway/tests/: conftest.py  test_api.py  test_ops_e2e.py  test_ops_integration.py  test_ops_unit.py
docs/: DEPLOYMENT.md  TEST_FLOW.md
docs/schemas/: cnp_v1_message_schema.md
firmware/include/: BaseModule.h  ConfigManager.h  IdentityManager.h  Types.h
firmware/src/: Application.cpp  EventQueue.cpp  IdentityManager.cpp  OtaManager.cpp  Protocol.cpp  modules_ExampleClimateModule.cpp
gateway/: .coverage  cnp_gateway.db  requirements.txt
gateway/app/: main.py
gateway/app/api/: admin.py  compat.py  routes.py
gateway/app/core/: auth.py  config.py  db.py  mqtt_client.py  mqtt_wildcard_fix.py  rate_limit.py  registry.py  storage.py
gateway/app/models/: schemas.py
gateway/tests/: test_api.py  test_mqtt_handlers.py  test_p0_regressions.py  test_p1_security.py  test_p1_sql_and_config.py
scripts/: benchmark_gateway.py  validate_schemas.py
(+13 files in other folders)
